src/components/dc-election-question/dc-election-question.css
:host {
  display: block;
  /* margin-bottom: 2em; */
}

dc-election-query {
  z-index: 1000;
}

.response:empty::before {
  content: "No candidates submitted responses in this ANC.";
  font-style: italic;
  font-weight: 400;
}

.response {
  font-weight: 600;
  font-size: 1em;
  padding: 1em 0;
  margin-top: 0.5em;
}
.response-gallery .response::before {
  content: "\203A"
}

.footnote {
  font-weight: 300px;
  font-size: 0.8em;
  font-style: italic;
  padding-top: 0.5em; 
}

/* Graph */

.layout-choice {
  display: grid;
  grid-gap: 0.3em;
  grid-template-columns: repeat( auto-fit, minmax(400px, 1fr) );

}

.layout-choice .response {
  /* font-size: 1em;
  font-weight: 400;
  height: 4em; */
  padding: 0 0.3em 0.3em 0.3em;
  vertical-align: bottom;
}
/* Removing in favor of a vertical line from answer
.response-gallery:not(:last-child) {
    border-right: 1px solid #AAA;
    padding-right: 0.3em;
} */

.response-quote, .response-rank {  
  display: grid;
  grid-template-columns: 0.1fr 1fr;
  padding: 1em 0;
  border-bottom: thin solid #DDD;
}
.response-rank .response {
  font-weight: 300;
  padding: 0;
}
.response-quote .response {
  font-weight: 400;
  font-size: 1em;
  padding: 0.4em;
  font-style: oblique;
  quotes: "\201C""\201D""\2018""\2019";
}
.response-quote .response:before {
  content: open-quote;
  color: #ccc;
  font-size: 3em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
.response-quote .response:after {
  content: close-quote;
  color: #ccc;
  font-size: 3em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

.rank-options {
  padding: 0;
  margin: 0;
  font: italic 1em Georgia;
  color: #666;
}
.rank-options  span {
  font: normal 1em Arial;
  color: #000;  
}

.rank-options li {
  border: 1px solid #CCC;
  padding: 0.5em;
  margin-left: 1.5em;
  margin-bottom: 0.5em;
}
.rank-options .ranked {
  border: 1px solid #0f9535;
}
/* Remove numbers for unranked or omitted */
.rank-options li.omit, .rank-options li.unranked {
  list-style: none;
}

.omit .text {
  font: normal 1em Arial;
  text-decoration: line-through; 
  color: #555;
}

.omit .comment {
  display: inline-block;
  text-decoration: unset;
  font-weight: 100;
  padding-left: 0.5em;
  font-style: italic;
}

